--- a/faraway/frontend/package.json
+++ b/faraway/frontend/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.5",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@iconify-icons/mdi": "^1.2.48",
+    "@iconify/react": "^6.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "lucide-react": "^0.507.0",
