--- a/faraway/frontend/package.json
+++ b/faraway/frontend/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@iconify-icons/mdi": "^1.2.48",
     "@iconify/react": "^6.0.0",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
