--- a/faraway/frontend/package.json
+++ b/faraway/frontend/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0"
   },
