--- a/faraway/backend/package.json
+++ b/faraway/backend/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-oauth2": "^1.8.0"
+    "passport-oauth2": "^1.8.0",
+    "path": "^0.12.7"
   }
 }
